--- a/menu/sale.html
+++ b/menu/sale.html
@@ -147,16 +147,16 @@
 <footer>
 	<div class="link">
 		<h1 class="h_1">Ссылки</h1>
-		<a href="main.html">
+		<a href="../main.html">
 			<p class="p_link p_p1">Главная</p>
 		</a>
-		<a href="menu/search.html">
+		<a href="search.html">
 			<p class="p_link p_p2">Поиск билетов</p>
 		</a>
-		<a href="menu/sale.html">
+		<a href="sale.html">
 			<p class="p_link p_p3">Акции</p>
 		</a>
-		<a href="sign/sign.html">
+		<a href="../sign/sign.html">
 			<p class="p_link p_p4">Авторизация</p>
 		</a>
 	</div>
