--- a/menu/search.html
+++ b/menu/search.html
@@ -36,5 +36,19 @@
 	</a>
 </header>
 
+<div class="search">
+	<div class="pl">
+		<input type="text" class="town" id="t1" placeholder="Откуда">
+		<input type="text" class="town" id="t2" placeholder="Куда">
+		<input type="date" class="in_date" id="d1">
+		<input type="date" class="in_date" id="d2">
+		<input type="text" class="pas" maxlength="2" placeholder="">
+		<button onclick="onClick()" class="b1">Найти рейс</button>
+	</div>
+</div>
+<div id="main">
+	
+</div>
+<script type="text/javascript" src="js/search_js.js"></script>
 </body>
 </html>
