--- a/sign/sign.html
+++ b/sign/sign.html
@@ -39,7 +39,7 @@
 	<form action="">
 		<h1 class="avt">Авторизация</h1>
 
-		<p class="label">Логин</p><br>
+		<p class="label">Телефон</p><br>
 		<input type="text" name="name"><br>
 
 		<p class="label">Пароль</p><br>
@@ -55,16 +55,16 @@
 <footer class="foot_1">
 	<div class="link">
 		<h1 class="h_1">Ссылки</h1>
-		<a href="main.html">
+		<a href="../main.html">
 			<p class="p_link p_p1">Главная</p>
 		</a>
-		<a href="menu/search.html">
+		<a href="../menu/search.html">
 			<p class="p_link p_p2">Поиск билетов</p>
 		</a>
-		<a href="menu/sale.html">
+		<a href="../menu/sale.html">
 			<p class="p_link p_p3">Акции</p>
 		</a>
-		<a href="sign/sign.html">
+		<a href="sign.html">
 			<p class="p_link p_p4">Авторизация</p>
 		</a>
 	</div>
